update settings and paths

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -1,5 +1,5 @@
-{# @var plugin \kraftwerkdesign\pdfthumbnailer\Pdfthumbnailer #}
-{# @var settings \kraftwerkdesign\pdfthumbnailer\models\Settings #}
+{# @var plugin \jhanshew\craftpdfthumbnailer\Pdfthumbnailer #}
+{# @var settings \jhanshew\craftpdfthumbnailer\models\Settings #}
 
 {% import "_includes/forms" as forms %}
 
